--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,12 +19,12 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #750000;
+  --ifm-color-primary-dark: #750000;
+  --ifm-color-primary-darker: #750000;
+  --ifm-color-primary-darkest: #750000;
+  --ifm-color-primary-light: #ca2028;
+  --ifm-color-primary-lighter: #ca2028;
+  --ifm-color-primary-lightest: #ca2028;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
