--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #ff0000;
+  --ifm-color-primary-dark: #ff0000;
+  --ifm-color-primary-darker: #ff0000;
+  --ifm-color-primary-darkest: #ff0000;
+  --ifm-color-primary-light: #ff0000;
+  --ifm-color-primary-lighter: #ff0000;
+  --ifm-color-primary-lightest: #ff0000;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #750000;
-  --ifm-color-primary-dark: #750000;
-  --ifm-color-primary-darker: #750000;
-  --ifm-color-primary-darkest: #750000;
-  --ifm-color-primary-light: #ca2028;
-  --ifm-color-primary-lighter: #ca2028;
-  --ifm-color-primary-lightest: #ca2028;
+  --ifm-color-primary: #ff0000;
+  --ifm-color-primary-dark: #ff0000;
+  --ifm-color-primary-darker: #ff0000;
+  --ifm-color-primary-darkest: #ff0000;
+  --ifm-color-primary-light: #ff0000;
+  --ifm-color-primary-lighter: #ff0000;
+  --ifm-color-primary-lightest: #ff0000;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
